--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 <head><meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>IFD</title>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="rwd.css"/>
+  <title>Interface Design</title>
+  <link rel="stylesheet" type="text/css" href="index.css"/>
 </head>
 
 <body>
 
 <h1>Interface Design</h1>
-	
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0</a>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1</a>
 	
 </body>
 </html>
