--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1>Interface Design</h1>
-<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0</a>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0</a> <br>
 <a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1</a>
 	
 </body>
