--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <h1>Interface Design</h1>
 <a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0</a> <br>
-<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1</a>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1</a> <br>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task2_Prototyping" >Task 2</a> <br>
 	
 </body>
 </html>
