--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <h1>Interface Design</h1>
-<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0</a> <br>
-<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1</a> <br>
-<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task2_Prototyping" >Task 2</a> <br>
-<a href="https://xd.adobe.com/view/319ec00e-d8ff-4436-5ab5-9488456547f6-47af/" >Task 3</a> <br>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task0_SWOT" >Task 0: SWOT</a> <br>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task1_DT" >Task 1: The Wallet Project</a> <br>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task2_Prototyping" >Task 2: Low-Fid Prototype</a> <br>
+<a href="https://xd.adobe.com/view/319ec00e-d8ff-4436-5ab5-9488456547f6-47af/" >Task 3: High-Fid Prototype</a> <br>
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task4_VUI-Concept" >Task 4: VUI Concept</a> <br>
 	
 </body>
 </html>
