--- a/task6+7_VUI/playground-artyom.html
+++ b/task6+7_VUI/playground-artyom.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Playgroud Artyom</title>
+    <title>VUI</title>
     <script src="js/libs/artyom.window.min.js"></script>
     <script src="js/playgroud-artyom-script.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-    <p>This is a playground to test the web-based capabilities for a <b>Voice User Interface</b> with artyom.</p>
-	<button>VUI starten</button>
+	<div id="button-div"><button id="button">VUI starten</button></div>
+	<div id="hilfe"></div>
+	<div id="hinweis"> </div>
 </body>
 </html>
