--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="https://xd.adobe.com/view/319ec00e-d8ff-4436-5ab5-9488456547f6-47af/" >Task 3: High-Fid Prototype</a> <br>
 <a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task4+5_VUI-Concept" >Task 4+5: VUI Concept</a> <br>
 <a href="https://kirawagenknecht.github.io/IFD-WiSe20-21/task6+7_VUI/playground-artyom.html" >Task 6+7: VUI</a> <br>	
+<a href="https://github.com/kirawagenknecht/IFD-WiSe20-21/tree/main/task8_Cardboard_VR" >Task 8: VR Cardboard Brille</a> <br>
 	
 </body>
 </html>
